[package]
name = "ac"
version = "0.1.0"
edition = "2021"
authors = ["dravenk <longxianwen@outlook.com>"]
description = "ac is a very small web3 toolbox."
readme = "README.md"
repository = "https://github.com/dravenk/ac/"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/ac"
keywords = ["ac", "web3", "blockchain" ]

[dependencies]
